# workgraph

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
config/: workgraph.yaml
deploy/: install-launchagent.sh  se.andhumans.workgraph.watch.plist.template
examples/: queries.cypher  seed_events.json
src/workgraph/: __init__.py  api.py  cli.py  config.py  db.py  models.py  offboard.py  util.py  workrank.py
src/workgraph/adapters/: __init__.py  base.py  filesystem.py  git_log.py  ics.py  imap.py
tests/: test_filesystem_adapter.py  test_imap.py  test_offboard.py  test_provenance.py  test_workrank.py
