[project]
name = "workgraph"
version = "0.1.0"
description = "An event-driven work graph on Neo4j with temporal decay ranking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fredrik Sjöberg" }]
dependencies = [
    "neo4j>=5.20",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "icalendar>=5.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
workgraph = "workgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workgraph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
